Melhorias na interface

--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -6,14 +6,15 @@
   "permissions": [
     "storage",
     "activeTab",
-    "<all_urls>"
+    "*://*/*"
   ],
   "background": {
-    "service_worker": "assets/background.js"
+    "service_worker": "assets/background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["*://*/*"],
       "js": ["assets/contentScript.js"]
     }
   ],
